syntax = "proto3";

package user;

message User{
	int32 id = 1;
	string email = 2;
	string password = 3;
	AccountStatus status = 4;
}

enum AccountStatus{
	UNKNOWN = 0;
	ACTIVE = 1;
	FROZEN = 2;
}

message CreateUserRequest{
	string email = 1;
	string password = 2;
}

message CreateUserResponse{
	int32 id = 1;
}

message QueryUserRequest{
	int32 id = 1;
	string email = 2;
	AccountStatus status = 3;
}

message QueryUserResponse{
	repeated User users = 1;
}

message DeleteUserRequest{
		int32 id = 1;
}

message DeleteUserResponse{
	User user = 1;
}

service UserService{
	rpc create(CreateUserRequest) returns (CreateUserResponse);
	rpc query(QueryUserRequest) returns (QueryUserResponse); // TODO stream in future
	rpc delete(DeleteUserRequest) returns (DeleteUserResponse);
}
