syntax = "proto3";

package user;

message User{
  int32 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  UserAuthLevel auth_level = 5;
  UserStatus status = 6;
}

enum UserAuthLevel{
  ADMIN = 0;
  CUSTOMER = 1;
}

enum UserStatus{
  ACTIVE = 0;
  FREEZE = 1;
  DROPPED = 2;
}

//message CreateUserRequest{
//  string name = 1;
//  string email = 2;
//  string password = 3;
//}
//
//message CreateUserResponse{
//  int32 id = 1;
//}
